[tool.poetry]
name = "asrom-llm"
version = "0.1.0"
description = ""
authors = ["Zijian Wu <zijian.wu14@gmail.com>"]
readme = "README.md"
packages = [{include = "asrom_llm"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
langchain = "^0.0.115"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
